name:                exp-CloudHaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mitsuji/exp-CloudHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable exp-CloudHaskell-exe
  hs-source-dirs:      app
  main-is:             Push.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , distributed-process
                     , network-transport-inmemory
                     , network-transport-tcp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/exp-CloudHaskell
